--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>我的网站首页...</title>
+<title>码上鉴MUC开放平台</title>
 </head>
 
 <body>
-<a href="https://docs.fuyeor.com/answer/8462.html" style="font-size:80px;color:#0781de;
+<a href="http://www.mashangjian.cn" style="font-size:80px;color:#0781de;
 cursor: pointer;
 font-size: 140px;
 color: #0781de;
@@ -22,8 +22,8 @@ white-space: nowrap;
 overflow: hidden;
 text-overflow: ellipsis;
 text-decoration: none;">
-&nbsp;我的网站首页...&nbsp;<br>
+&nbsp;码上鉴MUC开放平台&nbsp;<br>
 </a>
 </body>
 </html>
-[Reference] https://answers.fuyeor.com/zh-hans/question/8462
+[Reference] http://www.mashangjian.cn
